# ColonialMarinesUniverse

.github/: PULL_REQUEST_TEMPLATE.md
.github/map_checker/: Cargo.toml
.github/workflows/: check-template.yml
Content.Client/AU14/Cultist/: CultistDragSystem.cs
Content.Client/Construction/: ConstructionSystem.cs
Content.Client/Eye/Blinding/: BlurryVisionOverlay.cs
Content.Client/Interaction/: DragDropSystem.cs
Content.Client/Lobby/: LobbyUIController.cs
Content.Client/Lobby/UI/: HumanoidProfileEditor.xaml.cs
Content.Client/_RMC14/Overwatch/: OverwatchSquadView.xaml
Content.IntegrationTests/Tests/Chameleon/: ChameleonJobLoadoutTest.cs
Content.IntegrationTests/Tests/FootPrint/: FootPrintsSystemTest.cs
Content.IntegrationTests/Tests/Minds/: GhostRoleTests.cs
Content.IntegrationTests/_AU14/Platoons/: PlatoonOverrideGearTest.cs
Content.IntegrationTests/_CMU14/Blackfoot/: BlackfootPrototypeTest.cs
Content.IntegrationTests/_RMC14/: CMArmorSystemTest.cs  LarvaQueueDialogTest.cs  WallApcConstructionTest.cs
Content.Server/CharacterInfo/: CharacterInfoSystem.cs
Content.Server/FootPrint/: FootPrintsSystem.cs
Content.Server/Ghost/: GhostSystem.cs
Content.Server/Implants/: ChameleonControllerSystem.cs
Content.Shared/AU14/: CultistComponent.cs  KillAllYautjaRuleComponent.cs
Content.Shared/Clothing/: LoadoutSystem.cs
Content.Shared/DragDrop/: DraggableEvents.cs
Content.Shared/FootPrint/: FootPrintsComponent.cs
Content.Shared/Preferences/: HumanoidCharacterProfile.cs
Resources/Changelog/: CMU.yml
Resources/Maps/_CMU14/: chances_above.yml  (+3 more)
(+305 files in other folders)
