[package]
name = "map_checker"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
log = "0.4.32"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
simple_logger = "5.2.0"
walkdir = "2.5.0"

[profile.release]
opt-level = 3
debug = false
